--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="src/style.css" />
-    <title>JavaScript Snake</title>
+    <title>The Snake 🐍</title>
   </head>
   <body>
     <span style="font-family: 'Lobster', cursive;">&nbsp;</span>
